--- a/Pass Gene/index.html
+++ b/Pass Gene/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Generator</title>
-    <link rel="stylesheet" href="D:\HTML\My Works\Pass Gene\style.css">
+    <link rel="stylesheet" href="..\style.css">
 </head>
 <body>
     <div class="inputbx">
@@ -19,6 +19,6 @@
 
 
 
-    <script src="D:\HTML\My Works\Pass Gene\index.js"></script>
+    <script src="..\index.js"></script>
 </body>
 </html>
