--- a/Pass Gene/index.html
+++ b/Pass Gene/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="inputbx">
-        <h2>Click to generate your Password</h2>
+        <h2>Click here to generate your Password</h2>
         <input type="text" name="" placeholder="Generate Password" id="password"
         readonly="">
         <div id="btn" onclick="getPassword()">Generate</div>
