--- a/Pass Gene/index.html
+++ b/Pass Gene/index.html
@@ -14,6 +14,6 @@
         <div id="btn" onclick="getPassword()">Generate</div>
     </div>
     
-    <script src="..\index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
